[package]
name = "mobinogi-mml-converter"
version = "1.0.0"
description = "MIDI to Mobinogi MML Converter"
authors = ["molla2025"]
edition = "2021"

[lib]
name = "mobinogi_mml_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mobinogi-mml-converter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midly = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
